[RM] Bug #58120. Fix action's card resize when ExceptionCard in 'status' node is expanded.
 * Now there is two versions of ExceptionChain and ExceptionCard - default (uses React's state)
   and with state recovering (uses StateSaver component and context).
 * Add expand handling for ExceptionChaing and Exception card to trigger action's card remeasure.

--- a/FrontEnd/Sailfish-JS-report/src/styles/action.scss
+++ b/FrontEnd/Sailfish-JS-report/src/styles/action.scss
@@ -184,10 +184,6 @@
     box-sizing: border-box;
     word-break: break-all;
 
-    pre {
-        overflow-x: scroll;
-    }
-
     &__item {
         padding: 3px 7px;
     }
